--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -64,6 +64,7 @@
 
 .orderbtn-menu {
     margin-top: 20px;
+    margin-bottom : 40px;
     font-family: Bebas;
     font-size: 22px;
     background-color: #ff6969;
