--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -31,7 +31,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin: 20px 0;
+    margin: 20px 0px;
 }
 
 
@@ -59,8 +59,8 @@
 }
 
 .form-body {
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin-top: 50px;
+    margin-bottom: 20px;
     align-self: center;
     width: 50%;
 }
@@ -69,16 +69,19 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    margin-bottom : 10px;
 }
 
 
 .form-body .input-field input{
     height: 24px;
     width: 300px;
+    padding : 2px;
     border: 1px solid #ddd;
     border-radius: 3px;
     padding-left: 7px;
     margin-top: -1px;
+    border-radius : 4px;
 }
 
 .form-body p{
@@ -94,7 +97,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-top : 20px;
+    margin-bottom: 10px;
 }
 
 .submitbtn {
