--- a/src/components/Order.css
+++ b/src/components/Order.css
@@ -109,6 +109,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
     padding : 30px;
     width : 50%;
+    margin : 10px 0px 30px 0px;
 }
 
 .pesanan header{
