--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -140,3 +140,13 @@
     font-size: 24px;
     color: #aaa;
 } 
+
+
+.mapcont {
+    background-color: red;
+    width: 10px;
+    height: 10px;
+    position: relative;
+    left: 30%;
+    top: -5%;
+}
