--- a/src/components/Order.css
+++ b/src/components/Order.css
@@ -210,7 +210,7 @@
 .thanks-txt{
     margin-top: 50px;
     text-align: center;
-    color: #C70039;
+    color: black;
     font-family: "Supersonic";
     font-size: 60px;
 }
